--- a/index.html
+++ b/index.html
@@ -71,12 +71,16 @@
 				/* position: absolute; */
 				position: relative;
 				float: right;
-				min-width: 190px;
+				/* min-width: 190px; */
+				width: 48%;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
 
-			
+			.dropdown:hover .dropdown-content {
+				display: block;
+				width: 48%;
+			}
 			
 			.fit {  /* set relative picture size */
 				max-width: 100%;
