--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 				/* position: absolute; */
 				position: relative;
 				float: right;
-				/* min-width: 190px; */
-				width: 48%;
+				min-width: 190px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
