--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				width: 48%;
+				/* width: 48%; */
+				min-width: 2400px;
 			}
 
 			.dropdown-content {
