--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				/* width: 48%; */
-				min-width: 2400px;
+				width: 60%;
 			}
 
 			.dropdown-content {
@@ -71,7 +70,7 @@
 				display: none;
 				/* position: absolute; */
 				position: relative;
-				float: right;
+				float: left;
 				min-width: 190px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
