--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				width: 60%;
+				width:48%;
 			}
 
 			.dropdown-content {
@@ -71,7 +71,8 @@
 				/* position: absolute; */
 				position: relative;
 				float: left;
-				min-width: 190px;
+				/* min-width: 190px; */
+				width:48%;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
