--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				/* position: absolute; */
-				position: relative;
+				position: absolute;
+				/* position: relative; */
 				float: left;
-				/* min-width: 190px; */
-				width:48%;
+				min-width: 170px;
+				/* width:48%; */
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
