--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				width:48%;
+				/* width:48%; */
+				min-width: 190px;
 			}
 
 			.dropdown-content {
@@ -71,7 +72,7 @@
 				position: absolute;
 				/* position: relative; */
 				float: left;
-				min-width: 170px;
+				min-width: 190px;
 				/* width:48%; */
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
@@ -126,7 +127,7 @@
 		
 		<div class="btn-group">
 			<verticleButton>APPLE</verticleButton>
-			<verticleButton>Samsung</verticleButton>
+			<button type="button" onclick="location.href='devops';" class="btn btn-primary">DEV OPS</button>
 			<div class="dropdown">
 				<button class="verticleButton">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
