--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		
 		<div class="btn-group">
 			<verticleButton>APPLE</verticleButton>
-			<button class="verticleButton onclick="location.href='devops';" class="btn btn-primary">DEV OPS</button>
+			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
 				<button class="verticleButton">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
