--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 		
 		<div class="btn-group">
 			<verticleButton>APPLE</verticleButton>
-			<verticleButton class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
+			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
-				<verticleButton class="verticleButton">PROTOTYPES and RESEARCH</button>
+				<button class="verticleButton">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
