--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 			</div>
 		</script>
 		
-		
-			<verticleButton>APPLE</verticleButton>
+		<div class="btn-group">
+			<button class="verticleButton">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
 				<button class="verticleButton">PROTOTYPES and RESEARCH</button>
@@ -140,7 +140,7 @@
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
 				</div>
 			</div>
-		
+		</div>
 		
 		<script>
 			var gtech =  document.getElementById("gtech");
