--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			</div>
 		</script>
 		
-		<div class="btn-group">
+		<div class="verticleButton">
 			<button class="verticleButton">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
