--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 				</div>
 			</div>
 		</script>
-		
-		<div>
+				
+		<div class="btn-group">
 			<button class="verticleButton">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
