--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				font-size: 18px;
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
+				display: block;
 				float: left; /* Float the buttons side by side */
 			}
 			
@@ -32,7 +33,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				width: 60%;
+				width: 50%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -62,18 +63,18 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				/* width:48%; */
-				min-width: 190px;
+				width:50%;
+				/* min-width: 190px; */
 			}
 
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: absolute;
-				/* position: relative; */
+				/* position: absolute; */
+				position: relative;
 				float: left;
-				min-width: 190px;
-				/* width:48%; */
+				/* min-width: 190px; */
+				width:48%;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
