--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				position: relative;
+				position: absolute;
 				/* width: 60%; */
 			}
 
@@ -63,18 +63,18 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				/* width:48%; */
+				width:48%;
 				min-width: 290px;
 			}
 
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: absolute;
-				/* position: relative; */
+				/* position: absolute; */
+				position: relative;
 				float: left;
 				min-width: 290px;
-				/* width:48%; */
+				width:48%;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
