--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				position: absolute;
+				position: relative;
 				/* width: 60%; */
 			}
 
@@ -70,8 +70,8 @@
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				/* position: absolute; */
-				position: relative;
+				position: absolute;
+				/* position: relative; */
 				float: left;
 				min-width: 290px;
 				width:48%;
