--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
 				position: relative;
-				/* width: 60%; */
+				width: 290px;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -63,8 +63,7 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				width:48%;
-				min-width: 290px;
+				width: 290px;
 			}
 
 			.dropdown-content {
@@ -73,8 +72,7 @@
 				position: absolute;
 				/* position: relative; */
 				float: left;
-				min-width: 290px;
-				width:48%;
+				width: 290px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
