--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
 				position: relative;
-				width: 290px;
+				position: absolute;
+				min-width: 290px;
 			}
 
 			/* Clear floats (clearfix hack) */
