--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				position: relative;
 				position: absolute;
 				min-width: 290px;
 			}
@@ -64,7 +63,7 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				width: 290px;
+				min-width: 290px;
 			}
 
 			.dropdown-content {
@@ -73,7 +72,7 @@
 				position: absolute;
 				/* position: relative; */
 				float: left;
-				width: 290px;
+				min-width: 290px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
