--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				color: orange;
 				font-weight: bold;
 				font-size: 18px;
-				position: relative;
+				position: absolute;
 				display: inline-block;
-				min-width: 290px;
+				min-width: 500px;
 			}
 
 			.dropdown-content {
@@ -72,8 +72,8 @@
 				position: absolute;
 				/* position: relative; */
 				float: left;
-				min-width: 290px;
-				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				min-width: 500px;
+				/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
 				padding: 30px 5px 10px 10px;
 			}
 
@@ -133,7 +133,7 @@
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
 					<li><a class="dropdown-item" href="/cs6238" title="Secure Computer Systems (SCI)">Secure Computer Systems (SCI)</a></li>
-					<li><a class="dropdown-item" href="/cs6750" title="Human Computer Interaction (HCI)">Human Computer (HCI)</a></li>
+					<li><a class="dropdown-item" href="/cs6750" title="Human Computer Interaction (HCI)">Human Computer Interaction (HCI)</a></li>
 					<h5 class="dropdown-header">Computer Vision (CV)</h5>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
