--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				position: absolute;
+				position: relative;
 				min-width: 290px;
 			}
 
