--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			</div>
 		</script>
 				
-		<div class="btn-group-vertical">
+		<div class="btn-group">
 			<button class="verticleButton">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
