--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				color: orange;
 				font-weight: bold;
 				font-size: 18px;
-				position: absolute;
+				position: relative;
 				display: inline-block;
 				min-width: 200px;
 			}
@@ -67,7 +67,7 @@
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: absolute;
+				position: relative;
 				/* position: relative; */
 				float: left;
 				min-width: 200px;
