--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				min-width: 200px;
+				float: left;
+				min-width: 150px;
 			}
 
 			.dropdown-content {
@@ -70,7 +71,7 @@
 				position: relative;
 				/* position: relative; */
 				float: left;
-				min-width: 200px;
+				min-width: 150px;
 				/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
 				padding: 30px 5px 10px 10px;
 			}
