--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			</div>
 		</script>
 				
-		<div class="btn-group">
+		<div class="btn-group" style="display: block;">
 			<button class="verticleButton"style="display: block;" onclick="location.href='devops';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" style="display: block;" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
