--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 			</div>
 		</script>
 				
-		<div class="btn-group" style="display: block;">
-			<button class="verticleButton"style="display: block;" onclick="location.href='devops';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
+		<div class="btn-group">
+			<button class="verticleButton" style="display: block;" onclick="location.href='devops';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" style="display: block;" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
 				<button class="verticleButton" style="display: block;">PROTOTYPES and RESEARCH</button>
