--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 		</script>
 				
 		<div class="btn-group">
-			<button class="verticleButton" style="display: block;" onclick="location.href='devops';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
-			<button class="verticleButton" style="display: block;" onclick="location.href='devops';">DEV OPS</button>
+			<button class="verticleButton" style="display: table-column;" onclick="location.href='devops';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
+			<button class="verticleButton" style="display: table-column;" onclick="location.href='devops';">DEV OPS and WHITE PAPERS</button>
 			<div class="dropdown">
-				<button class="verticleButton" style="display: block;">PROTOTYPES and RESEARCH</button>
+				<button class="verticleButton" style="display: table-column;">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
