--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,7 +68,7 @@
 	<h1>SECTIONS</h1>
 		<ul style="list-style-type: upper-roman;">
 			<li><a href="#TRIALS">TRIALS</a></li>
-			<li><a href="#PRESENTATIONS">PRESENTATIONS</a></li>
+			<li><a href="#PRESENTATIONS">RESENTATIONS</a></li>
 			<li><a href="#SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</a></li>
 			<li><a href="#WHITE_PAPERS">WHITE PAPERS</a></li>
 		</ul><br><br><br>
