--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		</script>
 				
 		<div class="btn-group">
-			<button class="verticleButton" onclick="location.href='devops';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
+			<button class="verticleButton" onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
 			<div class="dropdown">
 				<button class="verticleButton">PROTOTYPES and RESEARCH</button>
