--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,18 +62,20 @@
 	
 	<br><br>
 	<div><p>
-		This page highlights my work experience with Avaya, AT&T and Tata Communications. Novel solutions, collaboration, software development and network configuration/architecture are documented.
+		This page presents a sample of my development activities with respect to the software development lifecycle. I've included work derived from several projects that highlight: UX Design, Machine Learning (Reinforcement Learning), Artificial Intelligence (Cognitive Systems), Computer Vision and a Java based Syntax Encoder.
     </p></div><br>
 	
-	<h1>SECTIONS</h1>
-		<ul style="list-style-type: upper-roman;">
-			<li><a href="#TRIALS">TRIALS</a></li>
-			<li><a href="#PRESENTATIONS">RESENTATIONS</a></li>
-			<li><a href="#SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</a></li>
-			<li><a href="#WHITE_PAPERS">WHITE PAPERS</a></li>
-		</ul><br><br><br>
 	
-    <h2 id="TRIALS">TRIALS</h2>
+	<h1>PROJECTS</h1>
+		<ul style="list-style-type: upper-roman;">
+			<li><a href="#UX DESIGN">UX DESIGN</a></li>
+			<li><a href="#MACHINE LEARNING">MACHINE LEARNING</a></li>
+			<li><a href="#ARTIFICIAL INTELLIGENCE">ARTIFICIAL INTELLIGENCE</a></li>
+			<li><a href="#COMPUTER VISION">COMPUTER VISION</a></li>
+  			<li><a href="#JAVA ENCODER">JAVA ENCODER</a></li>  
+	</ul><br><br><br>
+	
+    <h2 id="UX DESIGN">UX DESIGN</h2>
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
 		Listen to an <a href="trials/SIPI_TestCall.mp4"
