--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 <head>
-	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images/concat_img.png">
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images/gtech.png">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<br><br>
@@ -51,12 +51,12 @@
 			function setBG_Black() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
 				document.body.style.color = "yellow";
-				gtech.src = "images/im_hc.png";
+				gtech.src = "images/gtech_HCS.png";
 			}
 			function setBG_White() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
 				document.body.style.color = "black";
-				gtech.src = "images/concat_img.png";
+				gtech.src = "images/gtech.png";
 			}
 	</script>
 	
@@ -77,17 +77,12 @@
 	
     <h2 id="UX DESIGN">UX DESIGN</h2>
     <div><p>
-		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
-		Listen to an <a href="trials/SIPI_TestCall.mp4"
-		                target="_blank">RTP Stream</a>
-		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP-I (ITU.T 1Q.1912.5).
-		<br><br>
-		This trial provided a roadmap for a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP-I.
-		<br><br>
-		This project leveraged Tata Communications experience from a GSMA trial regarding SIP-I connectivity between international carriers.
-		See <a href="#PRESENTATIONS">PRESENTATIONS</a>
-		for more information on this trial.
-    </p></div><br><br>
+		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
+			<br><a href="#PRESENTATIONS">PRESENTATIONS</a>
+			<ul style="list-style: none;">
+				<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/" title="Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
+			</ul>
+	</p></div><br><br>
 		
 	<h2 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h2>
     <div><p>
