--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,9 +78,8 @@
     <h2 id="UX DESIGN">UX DESIGN</h2>
     <div><p>
 		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
-			<br><a href="#PRESENTATIONS">PRESENTATIONS</a>
 			<ul style="list-style: none;">
-				<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/" title="Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
+				<li><a href="https://rbobkoskie3.github.io/" title="IMPLEMENTATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			</ul>
 	</p></div><br><br>
 		
