--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -79,7 +79,8 @@
     <div><p>
 		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
 			<ul style="list-style: none;">
-				<li><a href="https://rbobkoskie3.github.io/" title="IMPLEMENTATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
+				<li><a href="https://rbobkoskie3.github.io/" title="ANALYSIS, DESIGN, IMPLEMENTATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
+				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			</ul>
 	</p></div><br><br>
 		
