--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -84,19 +84,9 @@
 			</ul>
 	</p></div><br><br>
 		
-	<h2 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h2>
+	<h2 id="ARTIFICIAL INTELLIGENCE">ARTIFICIAL INTELLIGENCE</h2>
     <div><p>
-		I enhanced productivity and reliability for Network Security Applications by developing and implementing Agile Software Development Processes for development, testing and delivery to production. 
-		<br><br>
-		This cross functional 
-		<a href="software_dev/SW_Lifecycle_Process.pdf"
-		   target="_blank">Continuous Integration and Delivery (CI/CD). Work Flow</a>
-		presents a methodology; derived from fundamental concepts of the Software Development Lifecycle that promote accountability and incorporate Agile processes for HW/SW Development/Deployment:
-		<br><br>
-		I developed a solution and guidelines for transitioning mission critical CSO physical servers to a
-		<a href="software_dev/DMZ_Cloud.pdf"
-		   target="_blank">Virtual Environment</a>
-		by utilizng VMware ESX Hypervisor to support an Infrastructure as a service (IaaS) cloud computing service model.
+		AI.
 	</p></div><br><br>
 		
 	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
