--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,6 +87,8 @@
 	<h2 id="ARTIFICIAL INTELLIGENCE">ARTIFICIAL INTELLIGENCE</h2>
     <div><p>
 		AI.
+		<a href="images/RPM_EXAMPLE.png"
+		   target="_blank">Sample problem: Raven's Progressive Matrices (RPM)</a>
 	</p></div><br><br>
 		
 	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
