--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -83,6 +83,17 @@
 				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			</ul>
 	</p></div><br><br>
+	
+	<h2 id="COMPUTER VISION">COMPUTER VISION</h2>
+    <div><p>
+		A project exploring Computer Vision implemented using Python (OpenCV), NumPy and FFmpeg.
+			<ul style="list-style: none;">
+				<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-1</a></li>
+				<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-2</a></li>
+				<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">CODE, DEVELOPMENT: Computer Vision</a></li>
+				<li><a href="docs/CV_PAPER.pdf" title="Explore Computer Vision" target="_blank">RESULTS DOCUMENTATION: Computer Vision</a></li>
+			</ul>
+	</p></div><br><br>
 		
 	<h2 id="ARTIFICIAL INTELLIGENCE">ARTIFICIAL INTELLIGENCE</h2>
     <div><p>
@@ -90,7 +101,7 @@
 		<a href="images/RPM_EXAMPLE.png"
 		   target="_blank">Sample problem: Raven's Progressive Matrices (RPM)</a>
 	</p></div><br><br>
-		
+	
 	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
     <div><p>
 		I presentated original work at the GSMA Trial Team Meeting-21, September 16-17, 2008.
