--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -98,9 +98,18 @@
 		
 	<h2 id="ARTIFICIAL INTELLIGENCE">ARTIFICIAL INTELLIGENCE</h2>
     <div><p>
-		AI.
+		A study of  the concepts, methods, and prominent issues in Knowledge-Based Artificial Intelligence and the application of these concepts to the design of knowledge-based AI agents. KBAI elucidate the relationship between knowledge-based artificial intelligence and the study of human cognition. I developed an AI Agent to solve Raven's Progressive Matrices (RPM). RPM is a nonverbal test that measures abstract reasoning and provides an estimate of fluid intelligence.
 		<a href="images/RPM_EXAMPLE.png"
 		   target="_blank">Sample problem: Raven's Progressive Matrices (RPM)</a>
+		<ul style="list-style: none;">
+			<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">CODE, DEVELOPMENT: Artificial Intelligence</a></li>
+			<li><a href="docs/CV_PAPER.pdf" title="Explore Computer Vision" target="_blank">RESULTS DOCUMENTATION: Artificial Intelligence</a></li>
+			
+			<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">CODE, DEVELOPMENT: Artificial Intelligence</a></li>
+			<li><a href="docs/CV_PAPER.pdf" title="Explore Computer Vision" target="_blank">RESULTS DOCUMENTATION: Artificial Intelligence</a></li>
+			
+			<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">TRAINING, OPERATION, MAINTENANCE: Artificial Intelligence</a></li>
+		</ul>
 	</p></div><br><br>
 	
 	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
