--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
     <div><p>
 		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
 			<ul style="list-style: none;">
-				<li><a href="https://rbobkoskie3.github.io/" title="ANALYSIS, DESIGN, IMPLEMENTATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Human-Computer Interaction (HCI) Interface Prototype</a></li>
+				<li><a href="https://rbobkoskie3.github.io/" title="Explore a Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Human-Computer Interaction (HCI) Interface Prototype</a></li>
 				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			</ul>
 	</p></div><br><br>
@@ -89,9 +89,9 @@
     <div><p>
 		A project exploring Computer Vision implemented using Python (OpenCV), NumPy and FFmpeg.
 			<ul style="list-style: none;">
-				<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-1</a></li>
-				<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-2</a></li>
-				<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">CODE, DEVELOPMENT: Computer Vision</a></li>
+				<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Explore Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-1</a></li>
+				<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Explore Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-2</a></li>
+				<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="Explore Computer Vision" target="_blank">CODE, DEVELOPMENT: Computer Vision</a></li>
 				<li><a href="docs/CV_PAPER.pdf" title="Explore Computer Vision" target="_blank">RESULTS DOCUMENTATION: Computer Vision</a></li>
 			</ul>
 	</p></div><br><br>
@@ -102,13 +102,9 @@
 		<a href="images/RPM_EXAMPLE.png"
 		   target="_blank">Sample problem: Raven's Progressive Matrices (RPM)</a>
 		<ul style="list-style: none;">
-			<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">CODE, DEVELOPMENT: Artificial Intelligence</a></li>
-			<li><a href="docs/CV_PAPER.pdf" title="Explore Computer Vision" target="_blank">RESULTS DOCUMENTATION: Artificial Intelligence</a></li>
-			
-			<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">CODE, DEVELOPMENT: Artificial Intelligence</a></li>
-			<li><a href="docs/CV_PAPER.pdf" title="Explore Computer Vision" target="_blank">RESULTS DOCUMENTATION: Artificial Intelligence</a></li>
-			
-			<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="" target="_blank">TRAINING, OPERATION, MAINTENANCE: Artificial Intelligence</a></li>
+			<li><a href="docs/Project3-rbobkoskie3-Python2.zip" title="Explore Artificial Intelligence" target="_blank">CODE, DEVELOPMENT: Artificial Intelligence</a></li>
+			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" title="Explore Artificial Intelligence" target="_blank">RESULTS DOCUMENTATION: Artificial Intelligence</a></li>
+			<li><a href="docs/AI_README.txt" title="Explore Artificial Intelligence" target="_blank">TRAINING, OPERATION, MAINTENANCE: Artificial Intelligence</a></li>
 		</ul>
 	</p></div><br><br>
 	
