--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -81,7 +81,7 @@
 		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
 			<ul style="list-style: none;">
 				<li><a href="https://rbobkoskie3.github.io/" title="Explore a Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Human-Computer Interaction (HCI) Interface Prototype</a></li>
-				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype</a></li>
+				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="Explore a Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">DEVELOPMENT, EVALUATION and OPERATION: Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			</ul>
 	</p></div><br><br>
 	
@@ -108,107 +108,23 @@
 		</ul>
 	</p></div><br><br>
 	
-	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
-    <div><p>
-		I presentated original work at the GSMA Trial Team Meeting-21, September 16-17, 2008.
-		The presentation was derived from development activities while working at Tata Communications.
-		This trial was sponsored by the GSMA to verify wireless interconnections over IP, which is part of the international GSM Association's program to develop the next generation of wireless services. The trial verified that the GSMA's IP eXchange (IPX) framework can interconnect wireless networks over IP, which is more efficient and flexible than the traditional Time-Division Multiplexing technology. This trial was part of the GSMA's IPX Pre-Commercial Implementation Project, which is verifying the design and operation of IPX networks through a series of trials designed to validate technical and commercial specifications.
-		<br><br>
-		View the presentation here:
-		<a href="presentations/IPXTrialPresentationTata-Telus-Telek.pdf"
-		   target="_blank">GSMA Presentation: Tata &lt=SIP-I (ANSI88)=&gt Telus &lt=SIP-I (ANSI88)=&gt Telek</a>
-		<br><br>
-		View the report here:
-		<a href="presentations/IPXTrialReportTata-Telus-TelekomAust.pdf"
-		   target="_blank">GSMA Report: Tata &lt=SIP-I (ANSI88)=&gt Telus &lt=SIP-I (ANSI88)=&gt Telek</a>
-		<br><br>
-		Press Release:
-		<a href="presentations/GSMAIPeXchangeTrial-PressRelease.pdf"
-		   target="_blank">GSMA Press Release: Tata &lt=SIP-I (ANSI88)=&gt Telus &lt=SIP-I (ANSI88)=&gt Telek</a>
-		<br><br>
-		An <a href="presentations/TELUS-Tata-TelekomAustria-GSMA.mp4"
-		      target="_blank">RTP Stream</a>
-		captured by a probe (running Wireshark) that was located in Tata Communications network. This is the first successful call between mobile operators over an IP eXchange (IPX) framework consisting of:
-		<br>
-		TELUS &lt=SIP-I (ANSI88)=&gt Tata Communications &lt=SIP-I (ITU-T92+)=&gt Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
-    </p></div><br><br><br>
+	<h2 id="JAVA ENCODER">JAVA ENCODER</h2>
+	<div><p>
+		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
+			<ul style="list-style: none;">
+				<li><a href="docs/Project3-rbobkoskie3-Python2.zip" title="Explore a Java Encoder" target="_blank">REQUIREMENTS: Java Encoder</a></li>
+				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="Explore a Java Encoder" target="_blank">CODE, DEVELOPMENT: Java Encoder</a></li>
+			</ul>
+	</p></div><br><br>
 	
-	<h2 id="WHITE_PAPERS">WHITE PAPERS</h2>
-    <div><p>
-		These peer-reviewed and published white papers originated from my work at Avaya Labs.
-		The following papers annotate technical solutions for implementing converged Voice, Video and Data over secure networks. Each solution included feasibility and functional analysis of customer requirements, build-out and verification.
-		The white papers, or application notes provided support for:
-		<ul style="list-style-type: circle;">
-			<li>Marketing Support: Pre-Sales</li>
-			<li>Customer  Support: Post-Sales</li>
-			<li>Corporate Knowledge Sharing: Inter and Intra Organization</li>
-		</ul>
-		<br>
-		Business Process Applications
-		<br>
-			<ul style="list-style-type: none;">
-				<li><a href="whitepapers/Business_Process_Applications/CPM21SES-CUCM60.pdf"
-					 target="_blank">PM21SES-CUCM60.pdf</a></li>
-				<li><a href="whitepapers/Business_Process_Applications/CPM21-TW6 Published.pdf"
-					 target="_blank">CPM21-TW6 Published.pdf</a></li>
+	<h2 id="MACHINE LEARNING">MACHINE LEARNING</h2>
+	<div><p>
+		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
+			<ul style="list-style: none;">
+				<li><a href="docs/Project3-rbobkoskie3-Python2.zip" title="Explore a Java Encoder" target="_blank">REQUIREMENTS: Java Encoder</a></li>
+				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="Explore a Java Encoder" target="_blank">CODE, DEVELOPMENT: Java Encoder</a></li>
 			</ul>
-		<br><br>
-		Video Conferencing
-		<br>
-			<ul style="list-style-type: none;">
-				<li><a href="whitepapers/Video_Conferencing_Publications/ACM-VCS-H323.pdf"
-					 target="_blank">ACM-VCS-H323.pdf</a></li>
-				<li><a href="whitepapers/Video_Conferencing_Publications/TbergAvayaVideo.pdf"
-					 target="_blank">TbergAvayaVideo.pdf</a></li>
-			</ul>
-		<br><br>
-		Audio Conferencing
-		<br>
-			<ul style="list-style-type: none;">
-				<li><a href="whitepapers/Audio_Conferencing_Publications/MX50-CUCM60-M2K.pdf"
-					 target="_blank">MX50-CUCM60-M2K.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmImgCas.pdf"
-					 target="_blank">S6100AcmImgCas.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmImgPri.pdf"
-					 target="_blank">S6100AcmImgPri.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmImgSip.pdf"
-					 target="_blank">S6100AcmImgSip.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmPri.pdf"
-					 target="_blank">S6100AcmPri.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmSip.pdf"
-					 target="_blank">S6100AcmSip.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100I55Sip.pdf"
-					 target="_blank">S6100I55Sip.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100MveSip.pdf"
-					 target="_blank">S6100MveSip.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100SesSip.pdf"
-					 target="_blank">S6100SesSip.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6200AcmCrisis.pdf"
-					 target="_blank">S6200AcmCrisis.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6200AcmImgCas.pdf"
-					 target="_blank">S6200AcmImgCas.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6200AcmImgPri.pdf"
-					 target="_blank">S6200AcmImgPri.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6200AcmPri.pdf"
-					 target="_blank">S6200AcmPri.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6200AcmSip.pdf"
-					 target="_blank">S6200AcmSip.pdf</a></li>
-				
-				
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6200CcmSip.pdf"
-					 target="_blank">S6200CcmSip.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6200SesSip.pdf"
-					 target="_blank">S6200SesSip.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6800m2k.pdf"
-					 target="_blank">S6800m2k.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6800m3k.pdf"
-					 target="_blank">S6800m3k.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6800m5k.pdf"
-					 target="_blank">S6800m5k.pdf</a></li>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/S6800NexTone.pdf"
-					 target="_blank">S6800NexTone.pdf</a></li>
-			</ul>
-    </p></div><br><br>
+	</p></div><br><br>
 
 	<footer>
 		<ul>
