--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -112,8 +112,9 @@
 	<div><p>
 		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
 			<ul style="list-style: none;">
-				<li><a href="docs/Project3-rbobkoskie3-Python2.zip" title="Explore a Java Encoder" target="_blank">REQUIREMENTS: Java Encoder</a></li>
-				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="Explore a Java Encoder" target="_blank">CODE, DEVELOPMENT: Java Encoder</a></li>
+				<li><a href="docs/JavaEncoderRequirements1.pdf" title="Explore a Java Encoder" target="_blank">REQUIREMENTS DEV-1: Java Encoder</a></li>
+				<li><a href="docs/JavaEncoderRequirements2.pdf" title="Explore a Java Encoder" target="_blank">REQUIREMENTS DEV-2: Java Encoder</a></li>
+				<li><a href="docs/JavaEncoderCodeWithJunitTestCases.zip" title="Explore a Java Encoder" target="_blank">CODE, DEVELOPMENT, TEST: Java Encoder</a></li>
 			</ul>
 	</p></div><br><br>
 	
