--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -129,7 +129,7 @@
 
 	<footer>
 		<ul>
-			<p>If I'm interested in further discussing Computer Security best practices with others. Enter comments/questions in textbox and click "Send".</p>
+			<p>If I'm interested in further discussion regarding this work.I'm interested in further discussion regarding this work. Enter comments/questions in textbox and click "Send".</p>
 			<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 				<textarea name="body"></textarea>
 				<input type="submit" value="Send" />
