--- a/devops/index.html
+++ b/devops/index.html
@@ -206,7 +206,7 @@
 
 	<footer>
 		<ul>
-			<p>If I'm interested in further discussion regarding this work. Enter comments/questions in textbox and click "Send".</p>
+			<p>I'm interested in further discussion regarding this work. Enter comments/questions in textbox and click "Send".</p>
 			<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 				<textarea name="body"></textarea>
 				<input type="submit" value="Send" />
