--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -120,10 +120,12 @@
 	
 	<h2 id="MACHINE LEARNING">MACHINE LEARNING</h2>
 	<div><p>
-		A UX concept to improve the ergonomics of human-system interaction for visually impaired students with fundamental Mathematical Graphs taught in Algebra lessons. I propose "Sonification" the ise of sound, in combination with enhanced visual imaging techniques to augment and improve the transmission and retention of information.
+		This project explores Reinforcement Learning (RL) through the evaluation of both two, and three-dimensional Grid-World MDPs using Markov Decision Processes (MDP), Policy/Value Iteration and Q-Learning, MDP problem-solving methods utilized the parameters: {Discount, Noise, Living Reward, for Policy/Value Iteration}, and {α: Learning Rate, ε: Action Selection for Q-Learning}. For reference, a Grid-World is defined as a deterministic game using Policy/Value Iteration to evaluate Q-Learning/Reinforcement Learning. The grid is typically a two-dimensional {x, y} space comprised of cells hosting: values for reward, barriers, and start/end locations. I chose to develop a three-dimensional grid with {x, y, z} to compare a more complex learning task vs. the two-dimensional space.
 			<ul style="list-style: none;">
-				<li><a href="docs/Project3-rbobkoskie3-Python2.zip" title="Explore a Java Encoder" target="_blank">REQUIREMENTS: Java Encoder</a></li>
-				<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="Explore a Java Encoder" target="_blank">CODE, DEVELOPMENT: Java Encoder</a></li>
+				<li><a href="docs/RL_REQ_MarkovDecisionProcesses.pdf" title="Explore Reinforcement Learning" target="_blank">REQUIREMENTS: Reinforcement Learning</a></li>
+				<li><a href="docs/RL_rbobkoskie3.zip" title="Explore Reinforcement Learning" target="_blank">CODE, DEVELOPMENT: Reinforcement Learning</a></li>
+				<li><a href="docs/RL_rbobkoskie3-analysis.pdf" title="Explore Reinforcement Learning" target="_blank">RESULTS DOCUMENTATION: Reinforcement Learning</a></li>
+				<li><a href="docs/RL_README.txt" title="Explore Reinforcement Learning" target="_blank">TRAINING, OPERATION, MAINTENANCE: Reinforcement Learning</a></li>
 			</ul>
 	</p></div><br><br>
 
