--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,8 +89,8 @@
     <div><p>
 		A project exploring Computer Vision implemented using Python (OpenCV), NumPy and FFmpeg.
 			<ul style="list-style: none;">
-				<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Explore Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-1</a></li>
-				<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Explore Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Part-2</a></li>
+				<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Explore Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Phase-1</a></li>
+				<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Explore Computer Vision (CV) Prototype" target="_blank">ANALYSIS, DESIGN, IMPLEMENTATION: Computer Vision Phase-2</a></li>
 				<li><a href="docs/robert-bobkoskie_FINALpy.zip" title="Explore Computer Vision" target="_blank">CODE, DEVELOPMENT: Computer Vision</a></li>
 				<li><a href="docs/CV_PAPER.pdf" title="Explore Computer Vision" target="_blank">RESULTS DOCUMENTATION: Computer Vision</a></li>
 			</ul>
